Cleans tweet example

--- a/tweets/css/leaflet.css
+++ b/tweets/css/leaflet.css
@@ -377,3 +377,5 @@
 .leaflet-popup-content {
   font: 12px/1.4 "Helvetica Neue", Arial, Helvetica, sans-serif;
   }
+
+  #cartodb_logo { display: none; }
