--- a/atm/css/leaflet.css
+++ b/atm/css/leaflet.css
@@ -1,4 +1,3 @@
-/* required styles */
 
 .leaflet-map-pane,
 .leaflet-tile,
@@ -342,7 +341,7 @@
 /* Visual appearance */
 
 .leaflet-container {
-  background: #ddd;
+  background: #000;
   }
 .leaflet-container a {
   color: #0078A8;
