--- a/atm/css/leaflet.css
+++ b/atm/css/leaflet.css
@@ -341,7 +341,7 @@
 /* Visual appearance */
 
 .leaflet-container {
-  background: #000;
+  background: #fff;
   }
 .leaflet-container a {
   color: #0078A8;
