--- a/atm/css/leaflet.css
+++ b/atm/css/leaflet.css
@@ -193,6 +193,7 @@
   }
 
 .leaflet-container .leaflet-control-attribution {
+  display:none;
   background-color: rgba(255, 255, 255, 0.7);
   box-shadow: 0 0 5px #bbb;
   margin: 0;
