--- a/tweets/css/leaflet.css
+++ b/tweets/css/leaflet.css
@@ -194,6 +194,7 @@
   }
 
 .leaflet-container .leaflet-control-attribution {
+  display:none;
   background-color: rgba(255, 255, 255, 0.7);
   box-shadow: 0 0 5px #bbb;
   margin: 0;
